--- a/.github/workflows/python-publish.yaml
+++ b/.github/workflows/python-publish.yaml
@@ -12,7 +12,7 @@ on:
   release:
     types: [published]
   push:
-    branches: [ "main" ]
+    branches: [ "main", "pypi" ]
     tags: [ "v*.*.*" ]
 
 permissions:
